@@ -89,6 +89,7 @@ sub gst_service_sysv_get_paths
 
        "fedora-1"     => ["$gst_prefix/etc/rc.d", "$gst_prefix/etc/rc.d/init.d", "../init.d"],
        "fedora-2"     => ["$gst_prefix/etc/rc.d", "$gst_prefix/etc/rc.d/init.d", "../init.d"],
+       "fedora-3"     => ["$gst_prefix/etc/rc.d", "$gst_prefix/etc/rc.d/init.d", "../init.d"],
 
        "specifix"     => ["$gst_prefix/etc/rc.d", "$gst_prefix/etc/rc.d/init.d", "../init.d"],
 
@@ -149,6 +150,7 @@ sub gst_service_sysv_get_runlevels
 
        "fedora-1"       => [3, 5],
        "fedora-2"       => [3, 5],
+       "fedora-3"       => [3, 5],
 
        "specifix"       => [3, 5],
        
@@ -206,6 +208,7 @@ sub gst_service_get_verbose_runlevels
      "pld-1.99"       => "redhat-5.2",
      "fedora-1"       => "redhat-5.2",
      "fedora-2"       => "redhat-5.2",
+     "fedora-3"       => "redhat-5.2",
 
      "specifix"       => "redhat-5.2",
 
@@ -1587,6 +1590,7 @@ sub gst_service_get_status
        "mandrake-7.2" => \&gst_service_redhat_get_status,
        "fedora-1"     => \&gst_service_redhat_get_status,
        "fedora-2"     => \&gst_service_redhat_get_status,
+       "fedora-3"     => \&gst_service_redhat_get_status,
        "specifix"     => \&gst_service_redhat_get_status,
 
        "suse-9.0"     => \&gst_service_suse_get_status,
