@@ -69,7 +69,7 @@ $version = "@VERSION@";
               "blackpanther-4.0",
               "debian-2.2", "debian-3.0", "debian-sarge",
               "suse-7.0", "suse-9.0",
-              "turbolinux-7.0", "fedora-1", "fedora-2",
+              "turbolinux-7.0", "fedora-1", "fedora-2", "fedora-3",
               "pld-1.0", "pld-1.1", "pld-1.99",
               "conectiva-9", "conectiva-10",
               "slackware-9.1.0", "slackware-10.0.0",
@@ -546,6 +546,7 @@ sub gst_installed_daemons_parse_table
      "pld-1.99"     => "redhat-6.2",
      "fedora-1"     => "redhat-6.2",
      "fedora-2"     => "redhat-6.2",
+     "fedora-3"     => "redhat-6.2",
      "specifix"     => "redhat-6.2",
      "vine-3.0"     => "redhat-6.2",
      "vine-3.1"     => "redhat-6.2",
