@@ -69,7 +69,7 @@ $version = "@VERSION@";
               "debian-2.2", "debian-3.0", "debian-sarge",
               "suse-7.0", "suse-9.0", "suse-9.1", "turbolinux-7.0",
               "slackware-8.0.0", "slackware-8.1", "slackware-9.0.0", "slackware-9.1.0", "slackware-10.0.0",
-              "gentoo", "pld-1.0", "pld-1.1", "pld-1.99", "fedora-1", "fedora-2", "specifix",
+              "gentoo", "pld-1.0", "pld-1.1", "pld-1.99", "fedora-1", "fedora-2", "fedora-3", "specifix",
               "vine-3.0", "vine-3.1",
               "freebsd-5", "freebsd-6");
 
@@ -540,6 +540,7 @@ sub conf_get_parse_table
    "pld-1.99"        => "pld-1.0",
    "fedora-1"        => "redhat-7.0",
    "fedora-2"        => "redhat-7.0",
+   "fedora-3"        => "redhat-7.0",
    
    "specifix"        => "redhat-7.0",
 
@@ -769,6 +770,7 @@ sub conf_get_replace_table
    "pld-1.99"        => "pld-1.0",
    "fedora-1"        => "redhat-7.0",
    "fedora-2"        => "redhat-7.0",
+   "fedora-3"        => "redhat-7.0",
    "specifix"        => "redhat-7.0",
 
    "vine-3.0"        => "redhat-7.0",
