@@ -78,8 +78,8 @@ $version = "@VERSION@";
               "slackware-8.0.0", "slackware-8.1", "slackware-9.0.0", "slackware-9.1.0", "slackware-10.0.0",
               "freebsd-4", "freebsd-5", "freebsd-6",
               "gentoo",
-	      "archlinux-0.7",
-              "pld-1.0", "pld-1.1", "pld-1.99", "fedora-1", "fedora-2", "specifix", "vine-3.0", "vine-3.1");
+              "archlinux-0.7",
+              "pld-1.0", "pld-1.1", "pld-1.99", "fedora-1", "fedora-2", "fedora-3", "specifix", "vine-3.0", "vine-3.1");
 
 $description =<<"end_of_description;";
        Manages system users.
@@ -355,6 +355,7 @@ my $logindefs_dist_map = {
   'pld-1.99'        => $rh_logindefs_defaults,
   'fedora-1'        => $rh_logindefs_defaults,
   'fedora-2'        => $rh_logindefs_defaults,
+  'fedora-3'        => $rh_logindefs_defaults,
   'specifix'        => $rh_logindefs_defaults,
   'debian-2.2'      => $rh_logindefs_defaults,
   'debian-3.0'      => $rh_logindefs_defaults,
