@@ -1,3 +1,9 @@
+2005-03-01  Carlos Garnacho Parro  <carlosg@gnome.org>
+
+	* network-conf.in, network.pl.in, platform.pl.in, service.pl.in,
+	services-conf.in, shares-conf.in, time-conf.in, users-conf.in:
+	Added support for Fedora Core 3, it's just like FC2
+
 2005-02-28  Carlos Garnacho Parro  <carlosg@gnome.org>
 
 	* network.pl.in: add dhcpcd as an option to dhclient. Fixes #164993
